# ConvFinQA

./: .gitignore  BestPerformanceLog.csv  README.md  REPORT.MD  SETUP.md  pyproject.toml
chatbot/: example_conversations.txt
config/: base.json
docs/: CODE_STRUCTURE.md  ENHANCED_TRACKING.md  FOUR_AGENT_APPROACH.md  SIX_AGENT_APPROACH.md  THREE_AGENT_APPROACH.md
experiment_tracking/configurations/: configurations.json  executions.json  experiments.db
experiment_tracking/results/20250628_131614/: command_output_20250628_131614.txt
experiment_tracking/results/20250628_132035/: command_output_20250628_132035.txt
experiment_tracking/results/20250628_142254/: command_output_20250628_142254.txt
experiment_tracking/results/20250628_142737/: all_results.txt  command_output_20250628_142737.txt  failed_results.txt  passed_results.txt  run_metadata.txt
experiment_tracking/results/20250628_161635/: all_results.txt  (+4 more)
notebooks/: dataset_exploration.ipynb  list_openai_models.ipynb  list_records.py  save_multi_agent_scripts.ipynb
scripts/: README.md  benchmark_multi_agent.py  dashboard.py  experiment_manager.py  test_enhanced_tracking.py
scripts/archived/: analyse_experiments.py  benchmark_hybrid.py  benchmark_multi_agent.py  experiment_runner.py  migrate_experiment_structure.py  test_prompt_tracking.py  test_suite.py  validate_pipeline.py
src/: main.py
src/data/: __init__.py  dataset.py  models.py  utils.py
src/evaluation/: __init__.py  evaluator.py  executor.py  metrics.py  multi_agent_results.py  performance_analysis.py
src/predictors/: __init__.py  hybrid_keyword_predictor.py  multi_agent_predictor.py
src/utils/: __init__.py  config.py  enhanced_tracker.py  financial_matcher.py  scale_normalizer.py  text_processing.py
(+193 files in other folders)
